# plcClientApp

clientApp(hostid)/: OTACauthClient.app  license.pem  sofilename.txt  swidchauth.lic
clientApp(hostid)/OTACauthClient/: app_info.json  initscript.sh
clientApp(hostid)/OTACauthClient/userScript/: HowToUse.txt  change-ip.sh  register-license.sh
clientApp(hostid)/project/: CMakeLists.txt  plcnext.proj
clientApp(hostid)/project/src/: ExampleAuthenticationProvider.cpp  UmModuleEx.cpp  UmModuleExConfig.cpp  verify.cpp
clientApp(hostid)/project/src/include/: ExampleAuthenticationProvider.hpp  UmModuleExConfig.hpp  verify.h
clientApp(hostid)/project/src/jwt/: string_view.hpp
clientApp(serial)/: OTACauthClient.app  license.pem  swidchauthclient.lic
clientApp(serial)/OTACauthClient/: app_info.json  initscript.sh
clientApp(serial)/OTACauthClient/AuthenticationProvider/config/: Authentication.modules.config  UmModuleEx.config
clientApp(serial)/OTACauthClient/userScript/: HowToUse.txt  register-license.sh
clientApp(serial)/project/: CMakeLists.txt  plcnext.proj
clientApp(serial)/project/src/: CMakeLists.txt  ExampleAuthenticationProvider.cpp  ExampleAuthorizationProvider.cpp  UmModuleExLibrary.cpp  curl.cpp  verify.cpp
clientApp(serial)/project/src/include/: ExampleAuthenticationProvider.hpp  UmModuleEx.hpp  curl.h  verify.h
clientApp(serial)/project/src/jwt/: algorithm.hpp  jwt.hpp  stack_alloc.hpp
clientApp(serial)/project/src/jwt/impl/: jwt.ipp
